--- a/styles/styles.css
+++ b/styles/styles.css
@@ -213,7 +213,7 @@ body {
   font-weight: 700;
   color: #ffffff;
   background: #83B3D3;
-  text-align: center
+  text-align: center;
   text-transform: uppercase;
 }
 
