--- a/styles/styles.css
+++ b/styles/styles.css
@@ -93,6 +93,8 @@ body {
   color: #ffffff;
   background-color: #756257;
   text-transform: uppercase;
+  padding: 9px 15px;
+  margin-top: 14px;
 }
 
 .main-container {
@@ -211,14 +213,14 @@ body {
 }
 
 .search {
-  padding: 91px 240px 93px;
+  padding: 91px 240px;
 }
 .search-title {
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
   text-transform: uppercase;
-  margin-bottom: 29px;
+  margin-top: 0;
 }
 
 .search-text {
@@ -227,7 +229,7 @@ body {
   font-weight: 400;
   color: #333333;
   margin: 0;
-  padding: 0;
+  margin-top: 29px;
 }
 
 .search-button {
@@ -285,7 +287,7 @@ body {
   display: flex;
   width: 1200px;
   margin: 0 auto;
-  padding: 0 72px;
+  padding: 40px 72px;
   background-color: #ffffff;
 }
 
@@ -321,18 +323,30 @@ body {
   background-repeat: no-repeat;
   color: #ffffff;
   background-color: #83B3D3;
-  padding: 0 72px;
+  padding: 35px 72px 83px;
+
 }
 
 .inner-header-title {
   font-size: 60px;
   line-height: 78px;
+  margin: 0;
+}
+
+.breadcrumbs {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  padding-bottom: 45px;
+  list-style-type: none;
+
 }
 
 .breadcrumbs-link {
   font-size: 16px;
   line-height: 21px;
   text-decoration: none;
+  margin-left: 26px;
 }
 
 .catalog-filter-group {
@@ -370,7 +384,7 @@ body {
 
 .select {
   color: #000000;
-  padding: 0 72px;
+  padding: 44px 72px 53px;
 }
 
 .select-filter {
@@ -395,7 +409,7 @@ body {
 .hotel-list {
   margin: 0;
   padding: 0;
-  list-style: none;
+  list-style-type: none;
 }
 
 .hotel-card-link {
@@ -458,22 +472,44 @@ body {
   border: none;
 }
 
-.pagination {
-  margin: 0;
-  padding: 0 72px;
+.pagination-container {
+  display: flex;
+  margin: 30px 72px 83px;
+  padding: 0;
+
 }
+
+.pagination-list {
+  display: flex;
+  margin: 0;  
+  list-style-type: none;
+}
+
 .pagination-link {
+  display: block;
+  width: 55px;
+  height: 55px;
   font-size: 20px;
   line-height: 26px;
   font-weight: 700;
   color: #ffffff;
   background: #83B3D3;
   text-align: center;
+
+}
+
+.pagination-item:not(:last-child) {
+  margin-right: 8px;
+
 }
 
 .pagination-current {
   color: #000000;
   background: #F2F2F2;
+}
+
+.pagination-filter {
+  margin-left: auto;
 }
 
 .subscription--no-image {
