--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,15 +66,16 @@ body {
 
 .navigation-list {
   display: flex;
+  flex-wrap: wrap;
   max-width: 460px;   /*345+345/3*/
   margin: 0;
   padding: 0;
+  align-items: center;
   list-style-type: none;
 }
 
 .navigation-link {
   display: block;
-  flex-wrap: wrap;
   padding: 20px 17px;
   font-size: 20px;
   line-height: 26px;
@@ -86,15 +87,21 @@ body {
 .navigation-user {
   margin-left: auto;
   min-width: 42px;
+  min-height: 66px;
 }
 
-.navigation-link--button {
+.navigation-user .navigation-link {
+  padding: 24px 12px;
+}
+
+.navigation-user .navigation-link--button {
   font-family: "PT Sans", sans-serif;
   color: #ffffff;
   background-color: #756257;
-  text-transform: uppercase;
+  min-width: 160px;
+  min-height: 37px;
+  text-align: center;
   padding: 9px 15px;
-  margin-top: 14px;
 }
 
 .main-container {
@@ -121,8 +128,17 @@ body {
   background: url("../images/divider.svg") bottom, url("../images/mountain-welcome.jpg");
   background-repeat: no-repeat;
   background-color: #5f9ea0;
-  padding: 46px 371px 82px;
-  margin-bottom: 63px;
+  padding: 51px 371px 82px;
+}
+
+.promo-image {
+  display: block;
+}
+
+.advantages {
+  display: flex;
+  flex-direction: column;
+  padding-top: 63px;
 }
 
 .advantages-block {
@@ -133,10 +149,11 @@ body {
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
-  text-transform: uppercase;  
+  text-transform: uppercase;
   padding: 0 240px;
-  margin-top: 0;
-  margin-bottom: 31px;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin: 0 auto 31px;
 }
 
 .advantages-text {
@@ -145,7 +162,8 @@ body {
   font-weight: 400;
   color: #333333;
   padding: 0 240px;
-  margin-top: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
   margin-bottom: 80px;
 }
 
@@ -162,17 +180,21 @@ body {
   line-height: 28px;
   font-weight: 700;
   text-transform: uppercase;
-  margin-top: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
   margin-bottom: 30px;
 }
 
 .advantages-block-number {
-  margin-top: 0;
-  margin-bottom: 30px;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin: 0 auto 30px;
 }
 
 .advantages-block-description {
   margin: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 .advantages-list {
@@ -197,12 +219,21 @@ body {
   line-height: 28px;
   font-weight: 700;
   text-transform: uppercase;
-  margin-top: 0;
-  margin-bottom: 20px;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin: 0 auto 20px;
+}
+
+.advantages-number {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin: 0 auto 30px;
 }
 
 .advantages-description {
   margin: 0 auto;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 .advantages-list--features .advantages-item {
@@ -215,15 +246,15 @@ body {
 .search {
   display: flex;
   flex-direction: column;
-  padding: 91px;
+  padding: 91px 0 93px;
+  align-items: center;
 }
 .search-title {
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
   text-transform: uppercase;
-  margin-top: 0;
-  margin-bottom: 29px;
+  margin: 0 auto 29px;
 }
 
 .search-text {
@@ -231,8 +262,9 @@ body {
   line-height: 26px;
   font-weight: 400;
   color: #333333;
-  margin-top: 0;
-  margin-bottom: 56px;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin: 0 auto 56px;
 }
 
 .search-button {
@@ -244,14 +276,10 @@ body {
   background-color: #756257;
   text-transform: uppercase;
   text-decoration: none;
-  margin: 0 312px;
-  max-width: 575px;
-  
+  width: 575px;
 }
 
 .subscription {
-  display: flex;
-  flex-direction: column;
   color: #ffffff;
   background-color: #83B3D3;
   background-image: url("../images/mountain-footer.jpg");
@@ -266,15 +294,22 @@ body {
   line-height: 36px;
   font-weight: 700;
   text-transform: uppercase;
-  margin-top: 0;
-  margin-bottom: 29px;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin: 0 auto 29px;
 }
 
 .subscription-description {
   font-size: 22px;
   line-height: 26px;
-  margin-top: 0;
-  margin-bottom: 46px;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin: 0 auto 46px;
+}
+
+.subscription-form {
+  display: flex;
+  justify-content: center;
 }
 
 .subscription-button {
@@ -303,9 +338,23 @@ body {
 }
 
 .footer-social-list {
+  display: flex;
+  flex-wrap: wrap; 
   width: 160px;
   list-style: none;
+  margin: 0;
   padding: 0;
+}
+
+.footer-social-item {
+  width: 40px;
+  height: 40px;
+  margin-right: 3px;
+  margin-bottom: 3px;
+}
+
+.footer-social-item:nth-child(3n) {
+  margin-right: 0;
 }
 
 .contacts {
