--- a/styles/styles.css
+++ b/styles/styles.css
@@ -475,9 +475,36 @@ body {
 }
 
 .hotel-list {
+  display: grid;
+  grid-template-columns: repeat(3, 340px);
   margin: 0;
   padding: 0;
   list-style-type: none;
+  gap: 10px 18px;
+  margin-bottom: 34px;
+}
+
+.hotel-card {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.hotel-card-all {
+  padding: 20px;
+}
+
+.hotel-card-content {
+  display: grid;
+  grid-template-columns: 133px 143px;
+  margin: 0;
+  padding: 0;
+  gap: 16px 25px;
+}
+
+.hotel-card-rating {
+  grid-column: span 2;
+  justify-self: end;
 }
 
 .hotel-card-link {
