--- a/styles/styles.css
+++ b/styles/styles.css
@@ -395,19 +395,40 @@ body {
   text-decoration: none;
 }
 
+.catalog-filter-form {
+  display: flex;
+
+}
+
 .catalog-filter-group {
   border: none;
+  margin: 0;
+  padding: 0;
 }
 
 .catalog-filter-title {
   font-size: 20px;
   line-height: 26px;
-  margin: 0;
-  padding: 0;
+  margin: 0 ;
+  padding: 0 67px 30px 0;
 }
 
 .catalog-filter-list {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.catalog-filter-item:not(:last-child) {
+  margin-bottom: 13px;
+
+}
+
+.control-input {
+  width: 20px;
+  height: 20px;
+  margin: 0;
+  margin-right: 19px;
 }
 
 .button {
@@ -422,7 +443,10 @@ body {
   background: #83B3D3;
   text-align: center;
   text-transform: uppercase;
-  border: none;  
+  border: none;
+  width: 160px;
+  height: 48px;
+  padding: 0;
 }
 
 .button--reset {
@@ -432,6 +456,9 @@ body {
   text-align: center;
   border: none;
   background-color: transparent;
+  width: 160px;
+  height: 48px;
+  padding: 0;
 }
 
 .select {
@@ -502,16 +529,16 @@ body {
 }
 
 .hotel-card-link {
-
+  margin-bottom: 16px;
 }
 
 .hotel-card-image {
   display: block;
-  margin-bottom: 16px;
 }
 
 .hotel-card-link-title {
   text-decoration-line: none;
+  margin-bottom: 16px;
 }
 
 .hotel-card-title {
@@ -520,9 +547,8 @@ body {
   font-weight: 700;
   color: #000000;
   margin: 0;
-  margin-bottom: 16px;
-
 }
+
 .button--hotel-card {
   font-size: 16px;
   line-height: 21px;
@@ -552,7 +578,7 @@ body {
 }
 
 .hotel-card-rating {
-  display: block;
+  display: flex;
 }
 
 .rating-stars {
@@ -560,7 +586,6 @@ body {
 }
 
 .rating-number {
-  display: block;
   font-size: 16px;
   line-height: 21px;
   background: #F2F2F2;
